# Graph-laplacian-parameters-optimizer

./: .gitignore  README.md  glove_per_query.csv  glove_summary.csv  main.py  pyproject.toml
benchmarks/: cve_loader.py  loader_glove.py  optimize_glove.py  run_glove_metrics.py  save_results.py  sift_loader.py  spectral_diag.py  test_cve_topology.py  test_sift_topology.py
benchmarks/graph_params_opt/: save_results.py  test_sift_topology.py
graphlaplacianoptimizer/: _build_direct.py  _isolated_build.py  _objective.py  _optimizer.py  energy_metrics_test.py  energy_metrics_test_heavy_sample.py  find_convergence.py  optimizer_and_topological_convergence.py  search_metrics.py
graphlaplacianoptimizer/energy_results/: experiment_config.json
graphlaplacianoptimizer/energy_results_ext_200k_300k/: experiment_config.json  params.json
graphlaplacianoptimizer/energy_results_merged/: experiment_config.json
notebooks/: cve_dataset.ipynb  energy_analysis.ipynb  experimentals_findings.md
results/bench_n1000_n1000_d128_20260309_171629/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/bench_n100_n100_d384_20260312_121414/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/bench_n4000_n4000_d128_20260309_175353/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/bench_n5000_n5000_d128_20260310_173727/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/bench_nN/A_nN/A_d128_20260310_164342/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/bench_nN/A_nN/A_d128_20260310_172021/: best_parameters.csv  spectral_comparison.csv  spectral_test.json
results/trials_n1000_d128_20260309_171629/: optuna_trials.csv
results/trials_n100_d384_20260312_121414/: optuna_trials.csv
results/trials_n4000_d128_20260309_175353/: optuna_trials.csv
results/trials_n5000_d128_20260310_173727/: optuna_trials.csv
results/trials_nN/A_d128_20260310_164342/: optuna_trials.csv
results/trials_nN/A_d128_20260310_172021/: optuna_trials.csv
tests/: test_isolated_build.py  test_metrics.py  test_objective.py  test_optimizer.py
