[project]
name = "graphlaplacianoptimizer"
version = "0.1.0"
description = "Bayesian optimizer for pyarrowspace graph Laplacian parameters"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrowspace>=0.25.14",
    "h5py>=3.16.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "optuna-dashboard>=0.17.0",
    "pytest>=9.0.2",
]

[project.scripts]
optimize = "graphlaplacianoptimizer._optimizer:main"

[tool.pytest.ini_options]
# Tells pytest where to look for tests — no need to specify the folder manually.
testpaths = ["tests"]
