[project]
name = "graphlaplacianoptimizer"
version = "0.1.0"
description = "Bayesian optimizer for pyarrowspace graph Laplacian parameters"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrowspace>=0.25.14",
    "h5py>=3.16.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphlaplacianoptimizer*", "benchmarks*"]

[project.optional-dependencies]
dev = [
    "optuna-dashboard>=0.17.0",
    "pytest>=9.0.2",
]

[project.scripts]
optimize = "graphlaplacianoptimizer._optimizer:main"

[tool.pytest.ini_options]
# Tells pytest where to look for tests — no need to specify the folder manually.
testpaths = ["tests"]
